# snag

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
snag/: __init__.py  capture.py  clipboard.py  config.py  main.py  mcp_client.py  notify.py  platform.py  vision.py
